fixed button padding remove white spacing

--- a/rc/gtk.css
+++ b/rc/gtk.css
@@ -92,20 +92,20 @@ GtkStatusBar { border-style: none; }
     (class based, rather than widget based)
 */
 
-GtkScale 
+GtkScale
 {
     -GtkRange-slider-width: 23px;
     -GtkScale-slider-length: 21px;
 }
 
-GtkScrollbar 
+GtkScrollbar
 {
     -GtkRange-stepper-size: 12px;
     -GtkRange-trough-border: 0px;
 }
 
 /* menuitems padding */
-GtkMenuBar 
+GtkMenuBar
 {
     padding: 0px;
     border-width: 0px;
@@ -114,7 +114,7 @@ GtkMenuBar
 GtkMenuBar>GtkMenuItem { padding: 4px 5px; }
 
 /* menu toolbutton */
-GtkMenuToolButton, GtkMenuToolButton * 
+GtkMenuToolButton, GtkMenuToolButton *
 {
     border-width: 0px;
     -GtkButton-focus-padding: 0px;
@@ -122,7 +122,7 @@ GtkMenuToolButton, GtkMenuToolButton *
 }
 
 /* notebooks */
-.notebook 
+.notebook
 {
     padding: 4px 6px 0px 6px;
     border-width: 2px 0px 6px 0px;
@@ -136,14 +136,14 @@ GtkMenuToolButton, GtkMenuToolButton *
 GtkOptionMenu { padding: 0px 4px; }
 
 /* separators */
-GtkSeparator 
+GtkSeparator
 {
     border-style: solid;
     border-width: 3px;
 }
 
 /* frames */
-GtkScrolledWindow 
+GtkScrolledWindow
 {
     border-style: inset;
     border-width: 1px;
@@ -155,7 +155,7 @@ GtkViewport { padding: 0px; }
 GtkProgressBar { padding: 0px; }
 GtkAssistant .sidebar { padding: 4px; }
 
-GtkInfoBar 
+GtkInfoBar
 {
     border-style: solid;
     border-width: 8px;
@@ -174,16 +174,16 @@ GtkComboBox>GtkFrame { padding: 0px 0px 0px 4px; }
 GtkWindow#gtk-tooltip { padding: 3px; }
 
 /* buttons */
-GtkButton { padding: 3px 4px 2px; }
+GtkButton { padding: 5px 6px 4px; }
 
 /* header buttons */
-GtkTreeView>GtkButton 
+GtkTreeView>GtkButton
 {
     border-width: 0px 2px;
     border-style: solid;
 }
 
-GtkList>GtkButton 
+GtkList>GtkButton
 {
     border-width: 0px 2px;
     border-style: solid;
